fix(pinterest): make error messages readable

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -103,6 +103,7 @@
 
       --g-blue: @accentColor;
       --color-background-info-base: @blue;
+      --color-background-error-base: @red;
       --color-background-warning-base: @peach;
       --color-background-success-base: @green;
     }
